@@ -35,6 +35,8 @@ export (QQ's a zone into a tarball)t
 Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 tbaMUD 3.59
+[Mar 13 2009] - Jamdog
+  Bug-Fix: Character deletion (remove_player, players.c), where the wrong player was potentially being deleted.
 [Mar 08 2009] - Jamdog
   Fixed a possible crash bug in delete_object (genobj.c) (Thanks Slicer)
   CAP function now recognises both preceeding color codes and ANSI codes (Thanks Slicer)
